--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span id='user-score'>0</span>:<span id='computer-score'>0</span>
     </div>
     <div class='result'>
-        <p>Paper beats rock. They LOSE!</p>
+        <p>Choose One!</p>
     </div>
 
     <div class='choices'>
